# jhps-workflows-issue1

paper1/: README.md  analysis.yml  run.sh
paper1/docker/: Dockerfile
paper1/evaluation/: decompress.sh  progress.csv.tar.xz
paper1/src/coding_similarity/: Cargo.toml  run_cluster.sh
paper1/src/coding_similarity/algorithm/: Cargo.toml
paper1/src/coding_similarity/algorithm/src/: lib.rs  phase_combis.rs  phase_combis_2.rs
paper1/src/coding_similarity/algorithm2/: Cargo.toml
paper1/src/coding_similarity/algorithm2/src/: lib.rs
paper1/src/coding_similarity/run/: Cargo.toml
paper1/src/coding_similarity/run/src/: clustering_alg.rs  lib.rs  main.rs  sim_job_finder.rs  types.rs
paper1/src/coding_similarity/similarities/hex/: Cargo.toml
paper1/src/coding_similarity/similarities/hex/src/: lib.rs
paper1/src/coding_similarity/similarities/hex/src/quant/: phase_combis.rs  phase_combis_2.rs
paper1/src/profile_similarity/: run.py
paper1/tools/kslib/src/: test.rs
paper1/tools/kstest/: Cargo.toml  run.sh
paper1/tools/kstest/src/: main.rs
