[package]
name = "kstest"
version = "0.1.0"
authors = ["eugen.betke <betke@dkrz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kolmogorov_smirnov = {path = "../kslib"}
csv = "1.1"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "*"
