[package]
name = "run"
version = "0.1.0"
authors = ["eugen.betke <betke@dkrz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bin = {path = "../similarities/bin"}
hex = {path = "../similarities/hex"}
csv = "1.1"
glob = "0.3.0" 
serde = { version = "1.0", features = ["derive"] }
grizzly = "*"
threadpool = "*"
chrono = "*"
num_cpus = "1.0"
jemallocator = "0.3.2"
ordered-float = "1.0"
clap = "2"
