[package]
name = "hex"
version = "0.1.0"
authors = ["eugen.betke <betke@dkrz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic_levenshtein = "*"
assert_approx_eq = "*"
ordered-float = "1.0"
statrs = "0.12.0"
